alteração no nome da imagem para tela desktop

--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ a {
   }
 
   .chamada {
-    background-image: url(img/pexels-rostislav-uzunov-5011647.jpg);
+    background-image: url(img/imagem-tela-laptop.jpg);
     background-size: cover;
 
     padding-top: 8.25rem;
